<resources>
    <string name="app_name">Noter</string>
    <string name="this_list_element_is_empty">this list element is empty</string>
    <string name="this_list_element_has_no_description">this list element has no description</string>
    <string name="this_note_has_no_title">This note has no title</string>
    <string name="this_note_has_no_body">This note has no body</string>
    <string name="save">Save</string>
    <string name="title">Title</string>
    <string name="body">Body</string>
    <string name="add">Add</string>
    <string name="delete_all">Delete All</string>
    <string name="back">back</string>
    <string name="set_timed_reminder">Set Timed Reminder?</string>
    <string name="this_is_an_empty_note">this is an empty note</string>
    <string name="time_of_reminder_is_not_set">time of reminder is not set</string>
    <string name="date_and_time_not_set">Date and time not set</string>
    <string name="set_date">Set Date</string>
    <string name="set_time">Set time</string>
    <string name="remindernotset">Reminder not set</string>
    <string name="space" />
    <string name="fuck">FUCK</string>
</resources>
