<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <EditText
            android:id="@+id/et_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            android:textSize="40sp"
            android:layout_margin="10dp"
            android:textColor="#000000"
            android:inputType="text|textMultiLine"
            tools:ignore="LabelFor"
            android:maxLength="25"/>

        <EditText
            android:id="@+id/et_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/body"
            android:textSize="20sp"
            android:layout_margin="10dp"
            android:inputType="text|textMultiLine"
            tools:ignore="LabelFor" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <CheckBox
                android:id="@+id/date_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/set_timed_reminder"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <Button
                android:id="@+id/button_setdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/set_date"
                android:visibility="gone"
                tools:ignore="ButtonStyle" />
            <Button
                android:id="@+id/button_settime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/set_time"
                android:visibility="gone"
                tools:ignore="ButtonStyle" />
        </LinearLayout>
        <TextView
            android:id="@+id/datetime_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_and_time_not_set"
            android:layout_gravity="center"/>
        <TextView
            android:id="@+id/actual_datetime_tv"
            android:visibility="invisible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>
        <Button
            android:id="@+id/bt_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:onClick="onClickSave"
            android:text="@string/save"/>

    </LinearLayout>


</ScrollView>
